using System.Collections;
using UnityEngine;

namespace Game.Scripts
{
	public class PlayerController : MonoBehaviour
	{
		public class ANCXUA
		{
			public class oiucxzjkl1ckl
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class ioujksmncxz2oizxjkl
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
	
			public class HjcoskxCJsi
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class Josxjicw2
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
	
			public class KLxkop3c
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
	
			public class Chxocka4
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class lkxjCJis5
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
	
			public class Pôciks6
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class oivpxcoiv7
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class Ocjisj8x
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class HCuskjxci9
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class kjcivJCis10
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class kjcivJCis10Chix
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class JXCikas2
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class Jcisoxklc3
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
			public class Chuxjsoa4c
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
	
			public class Hisjcax5
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
		}
	
		public class Chusoxizc1
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class uythjgnbv2
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class ghdf3
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class tefgdv4x
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class dscvx5
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class zxcvfdhty6
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class wqerthtnbv7
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class fsaxcvfgrdscxvbg8
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class adscvxbn9
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class xzcasdasxzc10
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class Kcisjhuwkakxc
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class Fsacvbsfgh
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class hxjiaJXiakw
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class hcizxjjHUAw
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class Kxijaicuas
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class KJCiajkx
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class CHuaix
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
			public class KJCiajkx
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
		}
		public class CHusx
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
			public class KJCiajkx
			{
				private int buaquadi;
				private string chusx;
				public float gmac;
				private double mciajx;

				public int getX()
				{
					return buaquadi;
				}
			}
		}
		public class HCuskx
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class hcusix
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class ANCXUAHCuskawo
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class ANCXUAchuskwjkax
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class ANlxclpakcv4kaoxc
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class OjkcisjKc5
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class KJhxclkasio1
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class oIUkxjiao2
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class OIuxcjkajkl3
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class poixcvopoicxvikouew4
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class OPIxcjklajkicx5
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
	
		public class OIcvkjasi6
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
	
		public class Oicklasko7c
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class isuodfjkcxv8
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		public class OIujxklmac9
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
	
		public class IUCJKCSA10kjcx
		{
			private int buaquadi;
			private string chusx;
			public float gmac;
			private double mciajx;

			public int getX()
			{
				return buaquadi;
			}
		}
		private Rigidbody rb;
		public bool isBuilding;

    
		public float speed;
		private Vector3 staticPos;
		private Animator anim;
		Vector3 direction;
   
		//Reference
		public static PlayerController instance;
		void Awake(){
			if(instance==null)instance=this;
			else if(instance!=this)Destroy(this.gameObject);

			rb=GetComponent<Rigidbody>();
		}
		// Start is called before the first frame update
		void Start()
		{
			anim=GetComponent<Animator>();
        
			anim.SetFloat("Blend",0,1f,0);
			direction=Vector3.forward;

		}


		// Update is called once per frame
		void FixedUpdate()
		{
			if(!IsGrounded() && !isBuilding){
				anim.SetFloat("Blend",0.33f,.33f,0.333f);
			}else{
				anim.SetFloat("Blend",1,1f,1);

			}
			switch(GameManager.instance.state){
				case GameManager.GameState.play :
					if(!isBuilding){
						transform.Translate(transform.forward*speed*Time.deltaTime, Space.World);

					}
					else{
						rb.velocity=Vector3.zero;
						Vector3 newPlace=new Vector3(staticPos.x,staticPos.y,staticPos.z);
						transform.position=newPlace;
					}
					break; 
			}

		}
		public void build(bool state){
			isBuilding=state;


		}public void setStaticPos(Vector3 s){
			staticPos=s;

		}public Vector3 getPlayerPos(){
			return this.transform.position;
		}
		public void jump(int n=1){
			rb.AddForce(new Vector3(0,n/15,0)*speed*5*n);
		}
		private void OnCollisionEnter(Collision other){
			if(other.gameObject.tag=="Finish"){
				MissDetector.instance.setCurrency();
				print("Level Ended win");
				speed=0;
				anim.SetTrigger("Endgame");
				GameManager.instance.winLevel();
			}
        
			if(other.gameObject.tag=="Obstacle"){
				print("Level Loose");
				speed=0;
				anim.enabled=false;
				GameManager.instance.gameStop();
				GameManager.instance.looseLevel();
			}
		}
		public void faceOtherWay(){
         
			StartCoroutine("cc",0f);
			// Invoke("changeDirection",.5f);

		}float targetRot=0;
		IEnumerator cc(){
			if(targetRot>-90)
				targetRot-=10;
			StairBuilder.instance.updateOffset();
			Quaternion target = Quaternion.Euler(0,targetRot, 0);
			transform.rotation= Quaternion.Slerp(transform.rotation, target, .8f);
			yield return new WaitForSeconds(.1f);
			if(targetRot>-90)
				StartCoroutine("cc",0f);

		}

		private void changeDirection(){
			//direction=-Vector3.forward;

		}
		bool IsGrounded() {
			return Physics.Raycast(transform.position, -Vector3.up, .5f + 0.1f);
		}
		public void startanim(){
			anim.SetTrigger("Start");
		}
		public Quaternion getPlayerRotation(){
			return this.gameObject.transform.rotation;
		}
		public Vector3 getPlayerAngles(){
			return this.gameObject.transform.localEulerAngles;
		}

 
	}
}
