using System.Collections;
using UnityEngine;

namespace RushStair.Scripts
{
    public class PlayerController : MonoBehaviour
    {
        private Rigidbody rb;
        public bool isBuilding;

    
        public float speed;
        private Vector3 staticPos;
        private Animator anim;
        Vector3 direction;
   
        //Reference
        public static PlayerController instance;
        void Awake(){
            if(instance==null)instance=this;
            else if(instance!=this)Destroy(this.gameObject);

            rb=GetComponent<Rigidbody>();
        }
        // Start is called before the first frame update
     
        public class bwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public bwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP()
        {
            
        }
        public bwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public bwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public bwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP GetbwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP(){
        var clasx = new bwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP();
        return  clasx;
    }

    public string RandomStringbwlmJSSuuwFSCGYlbQNLIwpRptPGUsjbiSrkxrbPwFtkrcgBcsxDRBBeGUwP(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class PSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public PSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp()
        {
            
        }
        public PSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public PSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public PSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp GetPSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp(){
        var clasx = new PSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp();
        return  clasx;
    }

    public string RandomStringPSIdXzUfNMJgiUSROBUcqHVQPEJqXdTmbmzZtXp(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class FJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public FJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS()
        {
            
        }
        public FJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public FJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public FJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS GetFJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS(){
        var clasx = new FJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS();
        return  clasx;
    }

    public string RandomStringFJsxznAbFdQikNMaUUaAmcIzyGrthilxDZaByxJqdmiHMLJHCZUZuihdAsysvHuXsS(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class XuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public XuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ()
        {
            
        }
        public XuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public XuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public XuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ GetXuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ(){
        var clasx = new XuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ();
        return  clasx;
    }

    public string RandomStringXuTkHosfNIpeocziQxQefDhBjhKHAoOxNmLiSQUuyLyLwpkXBxGslJQTMSAadleZ(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class DaekSqSUxSvsQDtarVPUEgTXIFTHbo
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public DaekSqSUxSvsQDtarVPUEgTXIFTHbo()
        {
            
        }
        public DaekSqSUxSvsQDtarVPUEgTXIFTHbo(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public DaekSqSUxSvsQDtarVPUEgTXIFTHbo(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public DaekSqSUxSvsQDtarVPUEgTXIFTHbo GetDaekSqSUxSvsQDtarVPUEgTXIFTHbo(){
        var clasx = new DaekSqSUxSvsQDtarVPUEgTXIFTHbo();
        return  clasx;
    }

    public string RandomStringDaekSqSUxSvsQDtarVPUEgTXIFTHbo(int length)
    {
        string chars = string.Empty;
        return chars;
    }
   void Start()
        {
            anim=GetComponent<Animator>();
        
            anim.SetFloat("Blend",0,1f,0);
            direction=Vector3.forward;

        }


        // Update is called once per frame
        void FixedUpdate()
        {
            if(!IsGrounded() && !isBuilding){
                anim.SetFloat("Blend",0.33f,.33f,0.333f);
            }else{
                anim.SetFloat("Blend",1,1f,1);

            }
            switch(GameManager.instance.state){
                case GameManager.GameState.play :
                    if(!isBuilding){
                        transform.Translate(transform.forward*speed
#if UNITY_EDITOR
                *2        
#endif
                                                             *Time.deltaTime, Space.World);

                    }
                    else{
                        rb.velocity=Vector3.zero;
                        Vector3 newPlace=new Vector3(staticPos.x,staticPos.y,staticPos.z);
                        transform.position=newPlace;
                    }
                    break; 
            }

        }
        public void build(bool state){
            isBuilding=state;


        }public void setStaticPos(Vector3 s){
            staticPos=s;

        }public Vector3 getPlayerPos(){
            return this.transform.position;
        }
        public void jump(int n=1){
            rb.AddForce(new Vector3(0,n/15,0)*speed*5*n);
        }
       
        public class OhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public OhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK()
        {
            
        }
        public OhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public OhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public OhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK GetOhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK(){
        var clasx = new OhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK();
        return  clasx;
    }

    public string RandomStringOhHxdVZmTLSzWmqZsLzLNeZGUEBvZJjVOkcXHyRDGvcShidkhOAngwvjIBdYTeMK(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class ZLDaklVjOOsBANPHCKvTFVBNCGRiHc
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public ZLDaklVjOOsBANPHCKvTFVBNCGRiHc()
        {
            
        }
        public ZLDaklVjOOsBANPHCKvTFVBNCGRiHc(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public ZLDaklVjOOsBANPHCKvTFVBNCGRiHc(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public ZLDaklVjOOsBANPHCKvTFVBNCGRiHc GetZLDaklVjOOsBANPHCKvTFVBNCGRiHc(){
        var clasx = new ZLDaklVjOOsBANPHCKvTFVBNCGRiHc();
        return  clasx;
    }

    public string RandomStringZLDaklVjOOsBANPHCKvTFVBNCGRiHc(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class nREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public nREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT()
        {
            
        }
        public nREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public nREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public nREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT GetnREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT(){
        var clasx = new nREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT();
        return  clasx;
    }

    public string RandomStringnREWZMTWCVpyAIIdHjUduXRPdEdzRtcszMIhXeTmtgLruJedNokcttUPzptViT(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class NyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public NyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw()
        {
            
        }
        public NyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public NyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public NyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw GetNyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw(){
        var clasx = new NyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw();
        return  clasx;
    }

    public string RandomStringNyBMZNofXLcURZyUWPBnCGKIgLEyBiiclBciqqMTlTYABgXqBnw(int length)
    {
        string chars = string.Empty;
        return chars;
    }

        public class ZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD
    {
        private int buaquadi;
        private string chusx;
        public float gmac;
        private double mciajx;

        public int getX()
        {
            return buaquadi;
        }
        public string Title { get; }
        public string Publisher { get; }
        public string? Isbn { get; }

        public ZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD()
        {
            
        }
        public ZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD(string title, string publisher, string? isbn)
            => (Title, Publisher, Isbn) = (title, publisher, isbn);

        public ZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD(string title, string publisher)
            : this(title, publisher, null) {}

        public void Deconstruct(out string title, out string publisher, out string? isbn)
            => (title, publisher, isbn) = (Title, Publisher, Isbn);

        public override string ToString() => Title;
    }

    public ZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD GetZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD(){
        var clasx = new ZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD();
        return  clasx;
    }

    public string RandomStringZFNPcZbkezghaxRPFoRAtGJVyZgAsIkMcteuHAVKZFmBZD(int length)
    {
        string chars = string.Empty;
        return chars;
    }
 private void OnCollisionEnter(Collision other){
            if(other.gameObject.tag=="Finish"){
                MissDetector.instance.setCurrency();
                print("Level Ended win");
                speed=0;
                anim.SetTrigger("Endgame");
                GameManager.instance.winLevel();
            }
        
            if(other.gameObject.tag=="Obstacle"){
                print("Level Loose");
                speed=0;
                anim.enabled=false;
                GameManager.instance.gameStop();
                GameManager.instance.looseLevel();
            }
        }
        public void faceOtherWay(){
         
            StartCoroutine("cc",0f);
            // Invoke("changeDirection",.5f);

        }float targetRot=0;
        IEnumerator cc(){
            if(targetRot>-90)
                targetRot-=10;
            StairBuilder.instance.updateOffset();
            Quaternion target = Quaternion.Euler(0,targetRot, 0);
            transform.rotation= Quaternion.Slerp(transform.rotation, target, .8f);
            yield return new WaitForSeconds(.1f);
            if(targetRot>-90)
                StartCoroutine("cc",0f);

        }

        private void changeDirection(){
            //direction=-Vector3.forward;

        }
        bool IsGrounded() {
            return Physics.Raycast(transform.position, -Vector3.up, .5f + 0.1f);
        }
        public void startanim(){
            anim.SetTrigger("Start");
        }
        public Quaternion getPlayerRotation(){
            return this.gameObject.transform.rotation;
        }
        public Vector3 getPlayerAngles(){
            return this.gameObject.transform.localEulerAngles;
        }

 
    }
}
